wait this looks promising

--- a/battle_showdown_challenge/src/app/globals.css
+++ b/battle_showdown_challenge/src/app/globals.css
@@ -10,6 +10,46 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --font-press-start: var(--font-press-start);
+
+
+
+}
+
+@theme {
+  --animate-slidein: slidein 1s ease-in-out 1;
+  --animate-slideinl: slideinl 1s ease-in-out 1;
+  --animate-idle: idle 5s ease-in-out infinite;
+
+  @keyframes slidein {
+    from {
+      transform:translateX(2000px);
+    }
+    to {
+      transform:translateX(0px);
+    }
+  }
+
+  @keyframes slideinl {
+    from {
+      transform:translateX(-2000px);
+    }
+    to {
+      transform:translateX(0px);
+    }
+  }
+
+  @keyframes idle  {
+    0% {
+      transform:translateY(0px);
+    }
+    50% {
+      transform:translateY(-10px);
+    }
+    100% {
+      transform:translateY(0px);
+    }
+  }
 }
 
 @media (prefers-color-scheme: dark) {
@@ -22,5 +62,5 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-press-start), Helvetica, sans-serif;
 }
